# minicode

./: .gitignore  README.md  start_api.sh
backend/: pyproject.toml  start_api.py
backend/src/core/: agent.py  controller.py
backend/src/memory/: context.py
backend/src/minicode/: config.py  main.py
backend/src/minicode/core/: agent.py  controller.py
backend/src/minicode/llm/: client.py  router.py
backend/src/minicode/llm/providers/: deepseek.py  glm.py  qwen.py
backend/src/minicode/memory/: context.py
backend/src/minicode/plan/: __init__.py  builder.py  planner.py
backend/src/minicode/runtime/: step_controller.py
backend/src/minicode/tools/: __init__.py  docstring.py  loader.py  registry.py  runner.py  schema.py
backend/src/minicode/tools/fs/: append_file.py  delete_file.py  list_dir.py  make_dir.py  move_file.py  patch_file.py  read_file.py  read_range.py  replace_in_file.py  write_file.py
backend/src/minicode/tools/repo/: read_repo.py  read_tree.py  repo_map.py
backend/src/minicode/tools/search/: grep.py  search_file.py  search_symbol.py
backend/src/minicode/tools/system/: shell_run.py
backend/src/plan/: planner.py  schema.py
backend/src/tools/: __init__.py  decorator.py  ignore.py  loader.py
backend/src/tools/fs/: append_file.py  move_file.py  patch_file.py  write_file.py
backend/src/tools/repo/: read_repo.py
backend/src/tools/search/: grep.py  search_file.py  search_symbol.py
frontend/Vue/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/Vue/src/: App.vue  styles.css
(+11 files in other folders)
