[project]
name = "minicode"
version = "0.3.2"
description = "Minimal AI Coding Assistant"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "ruff>=0.15.7",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
minicode = "minicode.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["minicode*"]

[tool.ruff]
cache-dir = ".ruff_cache"
ignore = ["ALL"]   # 只格式化，不做任何代码检查

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
